# tikeo

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  ROADMAP.md  docker-compose.mysql.yml  docker-compose.postgres.yml  docker-compose.yml  prompt.md  tikee-dev.db
crates/scheduler-config/: Cargo.toml
crates/scheduler-config/src/: lib.rs
crates/scheduler-server/: Cargo.toml
crates/scheduler-server/src/: alert.rs  cli.rs  cluster.rs  http.rs  lib.rs  main.rs  scheduler.rs  server.rs
crates/scheduler-server/src/cluster/: raft_rs.rs
crates/scheduler-server/src/http/: auth.rs  dto.rs  error.rs  mod.rs  openapi.rs  routes.rs  services.rs  session.rs
crates/scheduler-server/src/http/routes/: audit.rs  common.rs  jobs.rs  raft.rs  scripts.rs  system.rs  users.rs  workers.rs  workflows.rs
crates/scheduler-server/src/tunnel/: dispatcher.rs  mod.rs  registry.rs  service.rs
crates/scheduler-storage/: Cargo.toml
crates/scheduler-storage/src/: lib.rs  repository.rs
crates/scheduler-storage/src/entities/: app.rs  audit_log.rs  dispatch_queue.rs  job.rs  job_instance.rs  job_instance_attempt.rs  job_instance_log.rs  mod.rs  namespace.rs  permission.rs  raft_log_entry.rs  raft_membership_proposal.rs  raft_snapshot.rs  role.rs  role_permission.rs  script.rs  script_version.rs  user.rs  workflow_instance.rs  workflow_node.rs  workflow_node_instance.rs  workflow_shard.rs
crates/scheduler-storage/src/migration/: mod.rs
crates/scheduler-storage/src/repository/: attempt.rs  audit.rs  instance.rs  job.rs  job_repo.rs  log.rs  raft.rs  script.rs  util.rs  workflow.rs
crates/scheduler-wasm/: Cargo.toml
crates/scheduler-wasm/src/: lib.rs
crates/tikee-core/: Cargo.toml
crates/tikee-core/src/: lib.rs
crates/tikee-proto/: Cargo.toml  build.rs
crates/tikee-proto/proto/: worker.proto
crates/tikee-proto/src/: lib.rs
crates/tikee-server/: Cargo.toml
crates/tikee-server/src/: alert.rs  cli.rs  cluster.rs  lib.rs  server.rs  tikee.rs  transport_security.rs
crates/tikee-server/src/alert/: email.rs  retry.rs
crates/tikee-server/src/cluster/: raft_rs.rs
crates/tikee-server/src/cluster/raft_rs/: tests.rs
crates/tikee-server/src/http/: auth.rs  dto.rs  error.rs  mod.rs  oidc.rs  openapi.rs  router.rs  routes.rs  sdk_api_keys.rs  services.rs  session.rs  state.rs  tests.rs  trace.rs
crates/tikee-server/src/http/routes/: alerts.rs  audit.rs  calendars.rs  common.rs  event_sources.rs  gitops.rs  jobs.rs  metrics.rs  observability.rs  oidc_identity.rs  plugins.rs  raft.rs  roles.rs  scheduling.rs  scope.rs  scripts.rs  security.rs  service_accounts.rs  system.rs  users.rs  workers.rs  workflows.rs
crates/tikee-server/src/http/tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs  part_05.rs
crates/tikee-server/src/observability/: tracing.rs
crates/tikee-server/src/tunnel/: capability.rs  dispatcher.rs  governance.rs  lifecycle.rs  mod.rs  registry.rs  service.rs
crates/tikee-server/tests/: grafana_dashboard.rs  otel_exporter_smoke.rs
crates/tikee-server/tests/fixtures/tls/: server.key
crates/tikee-storage/: Cargo.toml
crates/tikee-storage/src/: lib.rs  repository.rs
crates/tikee-storage/src/entities/: alert_delivery_attempt.rs  alert_event.rs  alert_rule.rs  auth_session.rs  instance_event.rs  job.rs  job_instance.rs  job_instance_log.rs  job_version.rs  mod.rs  permission.rs  raft_applied_command.rs  raft_log_entry.rs  raft_member.rs  raft_membership_proposal.rs  raft_snapshot.rs  role.rs  role_menu_permission.rs  role_permission.rs  role_ui_action_permission.rs  script.rs  sdk_api_key.rs  service_account.rs  user.rs  user_role.rs  worker_logical_instance.rs  worker_pool.rs  worker_session.rs  workflow.rs  workflow_edge.rs  workflow_shard.rs
crates/tikee-storage/src/migration/: iden.rs  indexes.rs  mod.rs  sqlite_compat.rs
crates/tikee-storage/src/repository/: alert.rs  attempt.rs  audit.rs  auth.rs  instance.rs  job.rs  job_repo.rs  job_version.rs  log.rs  oidc_identity.rs  raft.rs  rbac.rs  schedule_cursor.rs  scope.rs  script.rs  sdk_api_key.rs  user.rs  util.rs  worker_lifecycle.rs  workflow.rs
crates/tikee-storage/src/repository/workflow/: conversions.rs  types.rs  validation.rs
crates/tikee-storage/tests/: database_compat.rs
crates/tikee-wasm/: Cargo.toml
crates/tikee-wasm/src/: lib.rs
crates/tikeo-config/: Cargo.toml
crates/tikeo-config/src/: lib.rs
crates/tikeo-core/: Cargo.toml
crates/tikeo-core/src/: lib.rs
crates/tikeo-migrate/: Cargo.toml
crates/tikeo-migrate/src/: apply.rs  code_apply.rs  code_only.rs  lib.rs  main.rs  render.rs  tests.rs
crates/tikeo-migrate/tests/: migration_cli.rs
crates/tikeo-migrate/tests/fixtures/java-springboot3/: build.gradle.kts
crates/tikeo-migrate/tests/fixtures/migration/: powerjob-export.json  xxl-job-export.json
crates/tikeo-wasm/: Cargo.toml
crates/tikeo-wasm/src/: lib.rs
examples/python/worker-demo/: README.md  pyproject.toml
examples/python/worker-demo/src/tikee_python_worker_demo/: __main__.py
examples/python/worker-demo/src/tikeo_python_worker_demo/: __init__.py  __main__.py
examples/python/worker-demo/tests/: test_demo.py
examples/rust/worker-demo/: Cargo.toml  README.md
examples/rust/worker-demo/src/: main.rs
sdks/python/tikee/: README.md  pyproject.toml
sdks/python/tikee/src/tikee/: __init__.py  client.py  config.py  management.py  proto_loader.py  runtime_dirs.py  (+3 more)
sdks/python/tikee/tests/: test_sdk.py
sdks/python/tikeo/: README.md  pyproject.toml
sdks/python/tikeo/tests/: test_sdk.py
sdks/rust/scheduler-worker-sdk/: Cargo.toml  README.md  build.rs
sdks/rust/scheduler-worker-sdk/src/: lib.rs
sdks/rust/tikee/: Cargo.toml  README.md  build.rs
sdks/rust/tikee/proto/: worker.proto
sdks/rust/tikee/src/: config.rs  console_capture.rs  error.rs  lib.rs  management.rs  proto.rs  session.rs  task.rs  tests.rs  wasm.rs
sdks/rust/tikeo/: Cargo.toml  README.md  build.rs
sdks/rust/tikeo/src/: config.rs  error.rs  lib.rs  logging.rs  management.rs  proto.rs  session.rs  task.rs  tests.rs  wasm.rs
(+1473 files in other folders)
