[package]
name = "tikee"
description = "Distributed task scheduling platform server entrypoint."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = [".", "crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/yhyzgn/tikee.git"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
anyhow = "1"
tikee-server = { path = "crates/tikee-server" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
