[package]
name = "scheduler-config"
description = "Configuration loading for scheduler."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
config = "0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[lints]
workspace = true
