[package]
name = "scheduler-server"
description = "scheduler server binary and management gateway."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
axum = "0"
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
scheduler-config = { path = "../scheduler-config" }
scheduler-core = { path = "../scheduler-core" }
scheduler-proto = { path = "../scheduler-proto" }
scheduler-storage = { path = "../scheduler-storage" }
serde = { version = "1", features = ["derive"] }
tokio-stream = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
tonic = "0.14"
tower = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
tower = { version = "0", features = ["util"] }

[lints]
workspace = true
