[package]
name = "scheduler-server"
description = "scheduler server binary and management gateway."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
axum = "0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
cron = "0.16.0"
humantime = "2.3.0"
sha2 = "0.10"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
metrics-util = "0.19"
moka = { version = "0.12", features = ["future"] }
protobuf = "2.28"
raft = { version = "0.7", default-features = true }
hex = "0.4"
async-trait = "0.1"
base64 = "0.22"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
scheduler-config = { path = "../scheduler-config" }
scheduler-core = { path = "../scheduler-core" }
scheduler-proto = { path = "../scheduler-proto" }
scheduler-storage = { path = "../scheduler-storage" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "time"] }
thiserror = "2"
url = "2"
time = { version = "0.3", features = ["formatting"] }
tonic = "0.14"
tower = "0"
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras"] }

[dev-dependencies]
tower = { version = "0", features = ["util"] }

[lints]
workspace = true
