[package]
name = "tikee-storage"
description = "Persistent storage repositories and migrations for tikee."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tikee-core = { path = "../tikee-core" }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "1.1.20", default-features = false, features = ["sqlx-sqlite", "sqlx-mysql", "sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", default-features = false, features = ["sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
utoipa = { version = "5" }
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1", features = ["v4", "v7"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
