[package]
name = "tikeo-core"
description = "Core domain types for tikeo."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1"
