[package]
name = "tikeo-migrate"
description = "Dedicated migration toolkit for moving legacy schedulers and Java workers to Tikeo."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["any", "mysql", "postgres", "sqlite", "runtime-tokio-rustls"] }
tikeo-core = { path = "../tikeo-core" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
