[package]
name = "tikeo-wasm"
description = "Worker-side WASM runtime executor for tikeo processors."
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tikeo-core = { path = "../tikeo-core" }
thiserror = "2"
wasmtime = { version = "45.0.0", default-features = false, features = ["cranelift", "runtime", "std"] }

[dev-dependencies]
wat = "1"

[lints]
workspace = true
