[project]
name = "tikeo-python-worker-demo"
version = "0.1.0"
description = "Python Worker demo for tikeo"
requires-python = ">=3.11"
dependencies = ["tikeo"]

[project.optional-dependencies]
test = ["pytest>=9.0.0"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
