[package]
name = "tikee-rust-worker-demo"
description = "Runnable Rust worker SDK demo."
edition = "2024"
version = "0.1.0"
license = "Apache-2.0"
publish = false

[dependencies]
tikee = { path = "../../../sdks/rust/tikee" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[workspace]
