[package]
name = "tikeo-rust-worker-demo"
description = "Runnable Rust worker SDK demo."
edition = "2024"
version = "0.2.0"
license = "MIT"
publish = false

[dependencies]
async-trait = "0.1"
tikeo = { path = "../../../sdks/rust/tikeo" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tikv-jemallocator = "0.7"
rustyline = "18"
tracing = "0.1"

[workspace]
