[project]
name = "tikee"
version = "0.1.0"
description = "Python Worker SDK for tikee"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "tikee contributors" }]
dependencies = [
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "protobuf>=6.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.0"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tikee = ["proto/*.proto"]
