[project]
name = "tikeo"
version = "0.3.12"
description = "Python Worker SDK for tikeo"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tikeo contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "protobuf>=6.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
test = ["pytest>=9.0.0"]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tikeo = ["proto/*.proto"]

[project.urls]
Homepage = "https://github.com/yhyzgn/tikeo"
Repository = "https://github.com/yhyzgn/tikeo"
Issues = "https://github.com/yhyzgn/tikeo/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
